--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/noobe/learning-redux#readme",
   "dependencies": {
-    "redux": "^4.2.0"
+    "axios": "^0.27.2",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1"
   }
 }
